fix(bctheme): BCTHEME-18 Cornerstone - Text logos truncated when viewed on mobile devices and smaller browser sizes

--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -22,11 +22,13 @@
     top: 0;
     width: 100%;
     z-index: zIndex("higher");
+    height: $header-height;
 
     @include breakpoint("medium") {
         border-bottom: container("border");
         overflow: visible;
         position: relative;
+        height: auto;
     }
 
     &.is-open {
@@ -42,6 +44,7 @@
     font-size: 0;   // 1
     margin: 0 remCalc($header-toggle-width); // 2
     text-align: center;
+    height: inherit;
 
     @include breakpoint("small") { // 4
         margin-left: remCalc($header-toggle-width * 1.5);
@@ -65,11 +68,14 @@
     > a {
         @include clearfix;
         color: $storeName-color;
-        display: inline-block;
-        padding: $header-logo-paddingVertical 0;
+        height: inherit;
+        display: flex;
+        align-items: center;
+        margin-right: auto;
+        margin-left: auto;
         position: relative;
         text-decoration: none;
-        width: 60%;
+        width: 70%;
         z-index: zIndex("low");
 
         // scss-lint:disable NestingDepth
@@ -124,22 +130,17 @@
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    padding: remCalc(3px) 0;
     text-overflow: ellipsis;
     text-transform: uppercase;
     white-space: nowrap;
 
     @include breakpoint("small") {
         font-size: $fontSize-logo-medium;
-        padding-bottom: 0;
-        padding-top: 0;
     }
 
     @include breakpoint("medium") {
         display: inline;
         font-size: $fontSize-logo-large;
-        margin-left: 0;
-        margin-right: -(remCalc(2px)); // 3
         max-width: none;
         overflow: auto;
         white-space: normal;
